Fix error links

--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -37,11 +37,11 @@
                 <ul class="treeview-menu">
                     <li><a href="~/Order"><i class="fa fa-circle-o"></i> Create New Order</a></li>
                     <li><a href="~/Order/Detail"><i class="fa fa-circle-o"></i> List Order Detail</a></li>
-                    <li><a href="~/themes/index.html"><i class="fa fa-circle-o"></i> History</a></li>
+                    <li><a href="#"><i class="fa fa-circle-o"></i> History</a></li>
                 </ul>
             </li>
 
-            <li><a href="https://adminlte.io/docs"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+            <li><a href="#"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
             <li class="header">LABELS</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
