--- a/OrderFood_SW/Views/Dishes/Create.cshtml
+++ b/OrderFood_SW/Views/Dishes/Create.cshtml
@@ -13,7 +13,7 @@
                         <strong>Create New Dish Information</strong>
                     </div>
                     <div class="panel-body">
-                        <form asp-action="Create" class="form-horizontal" role="form">
+                        <form asp-action="Create" method="post" enctype="multipart/form-data" class="form-horizontal">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                             <div class="form-group">
@@ -40,13 +40,13 @@
                                 </div>
                             </div>
 
-                            <div class="form-group">
+                            @* <div class="form-group">
                                 <label asp-for="ImageUrl" class="col-sm-3 control-label"></label>
                                 <div class="col-sm-9">
                                     <input asp-for="ImageUrl" class="form-control" />
                                     <span asp-validation-for="ImageUrl" class="text-danger"></span>
                                 </div>
-                            </div>
+                            </div> *@
 
                             <div class="form-group">
                                 <label asp-for="CategoryId" class="col-sm-3 control-label"></label>
@@ -62,6 +62,15 @@
                                     <label class="form-check-label" style="margin-top:6px">
                                         <input class="form-check-input" asp-for="IsAvailable" /> @Html.DisplayNameFor(model => model.IsAvailable)
                                     </label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label">Upload ảnh</label>
+                                <div class="col-sm-9">
+                                    <input type="file" name="ImageFile" class="form-control" />
+                                    <input type="hidden" asp-for="ImageUrl" />
+                                    <span asp-validation-for="ImageUrl" class="text-danger"></span>
                                 </div>
                             </div>
 
