--- a/OrderFood_SW/Views/Categories/Index.cshtml
+++ b/OrderFood_SW/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrderFood_SW.Models.Categories>
+﻿@model IEnumerable<OrderFood_SW.Models.Category>
 @{
     ViewData["Title"] = "Index";
 }
