--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -36,7 +36,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="~/Order"><i class="fa fa-circle-o"></i> Create New Order</a></li>
-                    <li><a href="~/Order/Detail"><i class="fa fa-circle-o"></i> List Order Detail</a></li>
+                    <li><a href="~/Order/OrderList"><i class="fa fa-circle-o"></i> List Of Order</a></li>
                     <li><a href="#"><i class="fa fa-circle-o"></i> History</a></li>
                 </ul>
             </li>
