--- a/OrderFood_SW/Views/Dishes/Index.cshtml
+++ b/OrderFood_SW/Views/Dishes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<OrderFood_SW.Models.Dish>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List Of Dish";
 }
 
 <!-- Search Box -->
@@ -19,89 +19,90 @@
                 </div>
             </div>
         </form>
-    </div>
-</div>
+        <br />
 
-<!-- Search Result -->
-<div class="table-responsive">
-    <table class="table table-bordered table-striped table-hover">
-        <thead>
-            <tr class="bg-primary">
-                <th>Dish ID</th>
-                <th>Dish Name</th>
-                <th>Dish Description</th>
-                <th>Dish Price</th>
-                <th>Image Url</th>
-                <th>Category Id</th>
-                <th>Is Available</th>
-                <th style="width:95px"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var Dish in Model)
-            {
-                <tr>
-                    <td>@Dish.DishId</td>
-                    <td>@Dish.DishName</td>
-                    <td>@Dish.DishDescription</td>
-                    <td>@Dish.DishPrice</td>
-                    <td>@Dish.ImageUrl</td>
-                    <td>@Dish.CategoryId</td>
-                    <td>@Dish.IsAvailable</td>
-                    <td>
-                        <a href="~/Dishes/Details/@Dish.DishId" class="btn btn-xs btn-success"><i class="fa fa-folder"></i></a>
-                        <a href="~/Dishes/Edit/@Dish.DishId" class="btn btn-xs btn-info"><i class="fa fa-edit"></i></a>
-                        <a href="~/Dishes/Delete/@Dish.DishId" class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+        <!-- Search Result -->
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped table-hover">
+                <thead>
+                    <tr class="bg-primary">
+                        <th>Dish ID</th>
+                        <th>Dish Name</th>
+                        <th>Dish Description</th>
+                        <th>Dish Price</th>
+                        <th>Image Url</th>
+                        <th>Category Id</th>
+                        <th>Is Available</th>
+                        <th style="width:95px"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var Dish in Model)
+                    {
+                        <tr>
+                            <td>@Dish.DishId</td>
+                            <td>@Dish.DishName</td>
+                            <td>@Dish.DishDescription</td>
+                            <td>@Dish.DishPrice</td>
+                            <td>@Dish.ImageUrl</td>
+                            <td>@Dish.CategoryId</td>
+                            <td>@Dish.IsAvailable</td>
+                            <td>
+                                <a href="~/Dishes/Details/@Dish.DishId" class="btn btn-xs btn-success"><i class="fa fa-folder"></i></a>
+                                <a href="~/Dishes/Edit/@Dish.DishId" class="btn btn-xs btn-info"><i class="fa fa-edit"></i></a>
+                                <a href="~/Dishes/Delete/@Dish.DishId" class="btn btn-xs btn-danger"><i class="fa fa-trash"></i></a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
 
-<!-- Pagination -->
-<div class="container" style="margin-top: auto; padding-bottom: 20px;">
-    <div class="text-center">
-        <ul class="pagination">
+        <!-- Pagination -->
+        <div class="container" style="margin-top: auto; padding-bottom: 20px;">
+            <div class="text-center">
+                <ul class="pagination">
 
-            <!-- First Page -->
-            @if (ViewBag.CurrentPage > 1)
-            {
-                <li>
-                    <a href="@Url.Action("Index", new { page = 1 })">First</a>
-                </li>
-            }
-            else
-            {
-                <li class="disabled"><a href="#"> First </a></li>
-            }
+                    <!-- First Page -->
+                    @if (ViewBag.CurrentPage > 1)
+                    {
+                        <li>
+                            <a href="@Url.Action("Index", new { page = 1 })">First</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="disabled"><a href="#"> First </a></li>
+                    }
 
-            <!-- Page Numbers -->
-            @for (int i = 1; i <= (int)ViewBag.TotalPages; i++)
-            {
-                if (i == ViewBag.CurrentPage)
-                {
-                    <li class="active"><a href="#">@i</a></li>
-                }
-                else
-                {
-                    <li><a href="@Url.Action("Index", new { page = i })">@i</a></li>
-                }
-            }
+                    <!-- Page Numbers -->
+                    @for (int i = 1; i <= (int)ViewBag.TotalPages; i++)
+                    {
+                        if (i == ViewBag.CurrentPage)
+                        {
+                            <li class="active"><a href="#">@i</a></li>
+                        }
+                        else
+                        {
+                            <li><a href="@Url.Action("Index", new { page = i })">@i</a></li>
+                        }
+                    }
 
-            <!-- Last Page -->
-            @if (ViewBag.CurrentPage < (int)ViewBag.TotalPages)
-            {
-                <li>
-                    <a href="@Url.Action("Index", new { page = ViewBag.TotalPages })">Last</a>
-                </li>
-            }
-            else
-            {
-                <li class="disabled"><a href="#"> Last </a></li>
-            }
+                    <!-- Last Page -->
+                    @if (ViewBag.CurrentPage < (int)ViewBag.TotalPages)
+                    {
+                        <li>
+                            <a href="@Url.Action("Index", new { page = ViewBag.TotalPages })">Last</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="disabled"><a href="#"> Last </a></li>
+                    }
 
-        </ul>
+                </ul>
 
+            </div>
+        </div>
     </div>
 </div>
