Update OrderDetails handle, fix some bugs

--- a/OrderFood_SW/Views/Order/Index.cshtml
+++ b/OrderFood_SW/Views/Order/Index.cshtml
@@ -11,7 +11,7 @@
             <th>Status</th>
             <th>QRCode</th>
             <th>Description</th>
-            <th>Thao tác</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
