--- a/OrderFood_SW/Views/Order/Detail.cshtml
+++ b/OrderFood_SW/Views/Order/Detail.cshtml
@@ -1,50 +1,141 @@
 ﻿@model OrderDetailViewModel
+@{
+    ViewBag.Title = "Order Detail";
+}
 
-<h2>Chi tiết món #@Model.Order.OrderId</h2>
+<div class="box box-primary">
+    <div class="box-body">
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <p><strong>Bàn:</strong> @Model.Order.TableId</p>
+                <p><strong>Thời gian:</strong> @Model.Order.OrderTime.ToString("dd/MM/yyyy HH:mm")</p>
+            </div>
+            <div class="col-md-6 text-center">
+                <p><strong>Ghi chú:</strong> @Model.Order.note</p>
+                @if(Model.Order.OrderStatus == 1)
+                {
+                    <p><strong>Trạng thái:</strong> Pending ...</p>
+                }
+                else if (Model.Order.OrderStatus == 2)
+                {
+                    <p><strong>Trạng thái:</strong> Approved</p>
+                }
+            </div>
+        </div>
 
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped table-hover">
+                <thead>
+                    <tr class="bg-primary">
+                        <th>Image</th>
+                        <th>Dish</th>
+                        <th>Amount</th>
+                        <th>Price</th>
+                        <th>Total</th>
+                        <th>Status</th>
+                        @if (Model.Order.OrderStatus == 1)
+                        {
+                            <th style="width: 145px"></th>
+                        }
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.OrderDetails)
+                    {
+                        <tr>
+                            <td><img class="img-bordered" style="width: 50px; height: 40px" src="~/images/@item.ImageUrl" /></td>
+                            <td>@item.DishName</td>
+                            <td>@item.Quantity</td>
+                            <td>@item.DishPrice.ToString("N0")</td>
+                            <td>@item.Total.ToString("N0")</td>
+                            @if (item.DishStatus == 0)
+                            {
+                                <td>Pedding...</td>
+                            }
+                            else if (item.DishStatus == 1)
+                            {
+                                <td>Served</td>
+                            }
+
+                            @if (Model.Order.OrderStatus == 1)
+                            {
+                                <td>
+                                    <div style="display: flex">
+                                        @if (item.DishStatus == 0)
+                                        {
+                                            <button style="margin: 0px 5px" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#editModal-@item.DishId">
+                                                <i class=" fa fa-edit"></i>
+                                            </button>
+
+                                            <form style="margin: 0px 5px" asp-action="DeleteDishFromOrder" method="post" style="display:inline">
+                                                <input type="hidden" name="OrderId" value="@item.OrderId" />
+                                                <input type="hidden" name="DishId" value="@item.DishId" />
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            </form>
+                                        }
+                                        @if (item.DishStatus == 1 || item.DishStatus == 0)
+                                        {
+                                            <form style="margin: 0px 5px" asp-action="ToggleDishStatus" asp-controller="Order" method="post">
+                                                <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
+                                                <input type="hidden" name="dishId" value="@item.DishId" />
+                                                <button type="submit" class="btn btn-sm @(item.DishStatus == 1 ? "btn-info" : "btn-success")">
+                                                    <i class="fa fa-check"></i>
+                                                </button>
+                                            </form>
+                                        }
+                                    </div>
+                                </td>
+                            }
+                        </tr>
+
+                        <!-- Modal sửa -->
+                        <div class="modal fade" id="editModal-@item.DishId" tabindex="-1" role="dialog">
+                            <div class="modal-dialog" role="document">
+                                <form asp-action="EditDishQuantity" method="post">
+                                    <input type="hidden" name="OrderId" value="@item.OrderId" />
+                                    <input type="hidden" name="DishId" value="@item.DishId" />
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Sửa số lượng món: @item.DishName</h5>
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input name="Quantity" type="number" min="1" class="form-control" value="@item.Quantity" />
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-primary">Lưu</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <div class="text-center">
+            @if (Model.Order.OrderStatus == 1) // Đơn đang chờ
+            {
+                <form method="post" asp-action="ApproveOrder" asp-controller="Order">
+                    <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
+                    <button type="submit" class="btn btn-success">Duyệt đơn</button>
+                </form>
+            }
+            else
+            {
+                <span class="text-success">Order approved</span>
+            }
+        </div>
+    </div>
+</div>
 <div>
-    <p><strong>Bàn:</strong> @Model.Order.TableId</p>
-    <p><strong>Thời gian:</strong> @Model.Order.OrderTime.ToString("dd/MM/yyyy HH:mm")</p>
-    <p><strong>Ghi chú:</strong> @Model.Order.note</p>
-    <p><strong>Trạng thái:</strong> @Model.Order.OrderStatus</p>
+    <a href="~/Order/OrderList" class="btn btn-primary">exit</a>
 </div>
 
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Hình ảnh</th>
-            <th>Món ăn</th>
-            <th>Số lượng</th>
-            <th>Đơn giá</th>
-            <th>Tổng</th>
-            <th>Trạng thái</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.OrderDetails)
-        {
-            <tr>
-                <td>
-                    <img class="img-bordered" style="width: 50px; height: 40px"
-                         src="~/images/@item.ImageUrl" alt="NoPhoto">
-                </td>
-                <td>@item.DishName</td>
-                <td>@item.Quantity</td>
-                <td>@item.DishPrice.ToString("N0")</td>
-                <td>@item.Total.ToString("N0")</td>
-                @if (item.DishStatus == 0)
-                {
-                    <td>Đang chờ</td>
-                } else if (item.DishStatus == 1)
-                {
-                    <td>Đã phục vụ</td>
-                }
-            </tr>
-        }
-    </tbody>
-</table>
-
-<p class="text-right">
+@* <p class="text-right">
     <strong>Tổng cộng:</strong>
     @Model.Order.TotalAmount.ToString("N0") VNĐ
-</p>
+</p> *@
