--- a/OrderFood_SW/Views/Order/OrderList.cshtml
+++ b/OrderFood_SW/Views/Order/OrderList.cshtml
@@ -7,19 +7,6 @@
 <!-- Search Box -->
 <div class="box box-primary">
     <div class="box-body">
-        <form id="formsearch" method="get" action="~/Dishes/Index">
-            <div class="input-group">
-                <input type="text" name="keyword" value="@ViewBag.Keyword" class="form-control" placeholder="Search by Dish price, name or description" />
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                    </button>
-                    <a href="~/Dishes/Create" class="btn btn-primary">
-                        <i class="fa fa-plus"></i> Add
-                    </a>
-                </div>
-            </div>
-        </form>
 
         <br
 
@@ -40,23 +27,22 @@
                     @foreach (var item in Model.FoundOrders)
                     {
                         <tr>
+                            <td>@item.TableId</td>
+                            <td>@item.OrderTime.ToString("dd/MM/yyyy HH:mm")</td>
+                            <td>@item.OrderStatus</td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.TableId)
+                                @if (item.OrderStatus == 1 || item.OrderStatus == -1)
+                                {
+                                    <p>Pending ...</p>
+                                }
+                                else
+                                {
+                                    @item.TotalAmount.ToString("N0")
+                                }
                             </td>
+                            <td>@item.note</td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.OrderTime)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.OrderStatus)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TotalAmount)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.note)
-                            </td>
-                            <td>
-                                <a href="~/Order/Detail?orderId=@item.OrderId">Details</a>
+                                <a href="~/Order/Detail/@item.OrderId">Details</a>
                             </td>
                         </tr>
                     }
