--- a/OrderFood_SW/Views/Order/Index.cshtml
+++ b/OrderFood_SW/Views/Order/Index.cshtml
@@ -35,6 +35,8 @@
                         <a asp-controller="Order" asp-action="Create" asp-route-tableId="@table.TableId" class="btn btn-primary btn-sm">
                             Create Order
                         </a>
+
+                        // đặt trước và hủy đặt trước bàn ở đây
                     }
                 </td>
             </tr>
