--- a/OrderFood_SW/Views/Order/OrderList.cshtml
+++ b/OrderFood_SW/Views/Order/OrderList.cshtml
@@ -20,7 +20,7 @@
                         <th>Order Status</th>
                         <th>Total Amount</th>
                         <th>Note</th>
-                        <th></th>
+                        <th style="width: 100px"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -42,7 +42,7 @@
                             </td>
                             <td>@item.note</td>
                             <td>
-                                <a href="~/Order/Detail/@item.OrderId">Details</a>
+                                <a href="~/Order/Detail/@item.OrderId">Show Details</a>
                             </td>
                         </tr>
                     }
