--- a/OrderFood_SW/Views/Shared/_MainHeader.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainHeader.cshtml
@@ -2,7 +2,7 @@
     <!-- Logo -->
     <a href="~/themes/index2.html" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>A</b>LT</span>
+        <span class="logo-mini"><b>B</b>F</span>
         <!-- logo for regular state and mobile devices -->
         <span class="logo-lg"><b>BIGFOOD</b>Restaurant</span>
     </a>
